--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@madzadev/audio-player": "^1.1.11",
     "@rollup/plugin-virtual": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
